# C-_lab5

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
